# archpm

./: .gitignore  :  CMakeLists.txt  Makefile  README.md  archpm  archpm.pro  archpm_zh_CN.ts  config.cpp  config.h  config.ui  dialog.cpp  dialog.h  dialog.ui  display.h  entry.cpp  mainwindow.cpp  mainwindow.h  moc_config.cpp  moc_dialog.cpp  moc_display.cpp  moc_entry.cpp  moc_mainwindow.cpp  moc_pkg_info.cpp  moc_pkg_note.cpp  moc_predefs.h  pkg_info.cpp  pkg_info.h  pkg_note.cpp  pkg_note.h  pkg_note.ui  ui_config.h  ui_configure.h  ui_dialog.h  ui_entry.h  ui_mainwindow.h  ui_pkg_info.h  ui_pkg_note.h
cmake/: check-code-style.cmake
pm/: cb.cpp  cb.h  conf.h  interface.cpp  interface.h  util.h
src/: config.cc  config.h  dialog.cc  dialog.h  display.cc  entry.cc  entry.h  main.cc  mainwindow.cc  mainwindow.h  monitor.cc  monitor.h  pkg_entry.cc  pkg_entry.h  pkg_info.cc  pkg_info.h  pkg_note.cc  pkg_note.h
src/pm/: cb.cpp  cb.h  conf.cpp  conf.h  debug.cpp  debug.h  interface.cpp  interface.h  parse.cpp  parse.h  util.cpp  util.h
src/pm2/: configure.cc  configure.h  database.cc  database.h  log.cc  log.h  option.cc  option.h  optparse.cc  optparse.h  package.cc  package.h
src/ui/: entry.ui  mainwindow.ui  pkg_info.ui  pkgentry.ui  pkginfo.ui  pkgnote.ui
